--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <!-- Font Awesome librarry -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- Normalize File -->
-    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <!-- StyleSheet color -->
-    <link rel="stylesheet" href="CSS/stylesheet.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
     <!-- Start header  -->
