--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <p>Have an Idea ?</p>
           <p>Share It with us and We will make as fast as possible</p>
           <div class="btn">
-            <a href="#">Contact Us</a>
+            <a href="mailto:contact@provaxapp.com">Contact Us</a>
           </div>
         </div>
       </section>
