add coming soon

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
     <!-- Normalize File -->
-    <link rel="stylesheet" href="CSS/normalize.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <!-- StyleSheet color -->
-    <link rel="stylesheet" href="CSS/stylesheet.css" />
+    <link rel="stylesheet" href="css/stylesheet.css" />
   </head>
   <body>
     <div class="container">
@@ -39,18 +39,18 @@
       <section id="home">
         <div class="content">
           <h1>
-            <span>Buy</span> in a second,<br />
-            <span>Try</span> in another.
+            <span>Try</span> in a second,<br />
+            <span>Buy</span> in another.
           </h1>
-          <p>Confidence is the thing we sell with clothes for free.</p>
+          <p>Confidence is the thing we sell with our services for free.</p>
           <div class="btn">
             <a href="#">Check Our Shop</a>
           </div>
           <div class="links">
-            <a href="#">
+            <a href="coming-soon.html">
               <img src="images/appstore.png" />
             </a>
-            <a href="#">
+            <a href="coming-soon.html">
               <img src="images/google-play.png" />
             </a>
           </div>
@@ -62,27 +62,27 @@
       <!-- End Landing section -->
       <!-- Start Services -->
       <section class="services" id="services">
-        <h2>Designed <span>Just For You</span></h2>
+        <h2>Discover <span>Your Perfect Fit</span></h2>
         <div class="content">
           <div class="box">
-            <i class="fa-solid fa-shirt fa-2x"></i>
-            <h3>High Quality</h3>
-            <p>Made with the finest just for you.</p>
+            <i class="fa-solid fa-wand-magic-sparkles fa-2x"></i>
+            <h3>Tailored to You</h3>
+            <p>Clothes crafted to fit your unique style and body.</p>
           </div>
           <div class="box">
             <i class="fa-solid fa-fire-flame-curved fa-2x"></i>
-            <h3>Stylish</h3>
-            <p>Beauty lies in details.</p>
+            <h3>Trendy Designs</h3>
+            <p>Stay ahead of the fashion curve with our latest collections.</p>
           </div>
           <div class="box">
-            <i class="fa-solid fa-wand-magic-sparkles fa-2x"></i>
-            <h3>Comfortable</h3>
-            <p>We're Not Comfortable Until You Are.</p>
+            <i class="fa-solid fa-shirt fa-2x"></i>
+            <h3>Luxurious Comfort</h3>
+            <p>Experience unparalleled comfort in every fabric and stitch.</p>
           </div>
           <div class="box">
             <i class="fa-solid fa-circle-check fa-2x"></i>
-            <h3>Confidence</h3>
-            <p>the confidence of the people is worth more than money.</p>
+            <h3>Boosted Confidence</h3>
+            <p>Feel empowered and self-assured in our stylish ensembles.</p>
           </div>
         </div>
       </section>
@@ -93,11 +93,22 @@
         <img src="images/img2.svg" alt="Section image" />
         <!-- </div> -->
         <div class="content">
-          <h2><span>Customize</span> the Way You Look</h2>
-          <p>Have an Idea ?</p>
-          <p>Share It with us and We will make as fast as possible</p>
+          <h2><span>Personalize</span> Your Style</h2>
+          <p>Have a unique style in mind?</p>
+          <p>
+            Whether it's a bold statement piece or a subtle refinement, share
+            your ideas with us.
+          </p>
+          <p>
+            Our expert team is ready to collaborate with you to turn your vision
+            into reality.
+          </p>
+          <p>
+            From custom fits to intricate details, we're dedicated to crafting
+            garments that reflect your individuality.
+          </p>
           <div class="btn">
-            <a href="mailto:contact@provaxapp.com">Contact Us</a>
+            <a href="mailto:contact@provaxapp.com">Get in Touch</a>
           </div>
         </div>
       </section>
@@ -105,17 +116,17 @@
       <!-- Start CTA Section -->
       <section class="cta" id="contact">
         <div>
-          <h2>What Are You Waiting For</h2>
-          <p>Pick Your Style</p>
+          <h2>Don't Miss Out</h2>
+          <p>Discover Your Perfect Look Today</p>
         </div>
         <div>
-          <a href="#">Order Now</a>
+          <a href="#">Start Shopping</a>
         </div>
       </section>
       <!-- End CTA Section -->
       <!-- Start Footer -->
       <footer>
-        <p>&copy; CopyRight by <a href="#header">LookLens</a></p>
+        <p>&copy; CopyRight by <a href="#header">ProvaX</a></p>
       </footer>
       <!-- End Footer -->
     </div>
