--- a/index.html
+++ b/index.html
@@ -136,32 +136,31 @@
     </section>
     <!-- End CTA Section -->
     <!-- Start Contact Section -->
-      <section id="contact">
-        <h2>Contact Us</h2>
-        <h3>Have Any Questions?</h3>
-        <p>Don't hesitate to Mail Us</p>
-        <div>
-          <div class="box">
-            <i class="fa-solid fa-phone"></i>
-            <h4>Call Us On</h4>
-            <p>+20 012 3456 7890</p>
-          </div>
-          <div class="box">
-            <i class="fa-solid fa-location-dot"></i>
-            <h4>Our Location</h4>
-            <p>Egypt</p>
-          </div>
-          <div class="box">
-            <i class="fa-solid fa-envelope"></i>
-            <h4>Email</h4>
-            <p>adhamh372002@gmail.com</p>
-          </div>
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <h3>Have Any Questions?</h3>
+      <p>Don't hesitate to Mail Us</p>
+      <div>
+        <div class="box">
+          <i class="fa-solid fa-phone"></i>
+          <h4>Call Us On</h4>
+          <p>+20 012 3456 7890</p>
         </div>
-        <form action="https://formspree.io/f/xdoqlgvy" method="post">
+        <div class="box">
+          <i class="fa-solid fa-location-dot"></i>
+          <h4>Our Location</h4>
+          <p>Egypt</p>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-envelope"></i>
+          <h4>Email</h4>
+          <p>contact@provaxapp.com</p>
+        </div>
+      </div>
+      <form action="https://formspree.io/f/xdoqlgvy" method="post">
         <div class="overlay"></div>
-    <div class="container">
-
-          <div class='email'>
+        <div class="container">
+          <div class="email">
             <input
               type="text"
               id="name"
@@ -190,14 +189,14 @@
             placeholder="Message"
           ></textarea>
           <button value="submit" class="btn">Send Message</button>
-          </div>
-        </form>
-      </section>
-      <!-- End Contact Section -->
-      <!-- Start Footer -->
-      <footer>
-        <p>&copy; 2024 <a href="#header">ProvaX</a>. All rights reserved.</p>
-      </footer>
+        </div>
+      </form>
+    </section>
+    <!-- End Contact Section -->
+    <!-- Start Footer -->
+    <footer>
+      <p>&copy; 2024 <a href="#header">ProvaX</a>. All rights reserved.</p>
+    </footer>
     <!-- End Footer -->
   </body>
 </html>
