finzlize about page

--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
         <nav>
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
-          <a href="#services">Services</a>
-          <a href="#contact">Contact</a>
+          <a href="index.html#services">Services</a>
+          <a href="index.html#contact">Contact</a>
         </nav>
       </header>
       <!-- End header  -->
@@ -39,10 +39,36 @@
       <!-- Main Content Section -->
       <main>
         <section id="about">
-          <div class="container">
-            <h2>About Us</h2>
-            <p>Introduce your company and its mission here.</p>
-            <!-- Other information about your company -->
+          <h2>About <span>ProvaX</span></h2>
+          <div>
+            <p>
+              ProvaX revolutionizes the online shopping experience, addressing
+              common concerns such as body shape discussions, hygiene worries,
+              and garment accuracy. Through an innovative approach, customers
+              interact seamlessly with avatars tailored to their own
+              specifications or with the assistance of customer service agents.
+              Our platform even enables body scanning for precise fits, ensuring
+              comfort and confidence.
+            </p>
+
+            <p>
+              Accessible anytime, anywhere, whether at home, work, or on the go,
+              ProvaX empowers users to explore a myriad of clothing options via
+              laptop, tablet, or smartphone. As the retail landscape evolves,
+              the choice to embrace technology becomes imperative. ProvaX offers
+              retailers and brands a scalable, user-friendly solution that
+              enhances customer engagement and fosters competitiveness.
+            </p>
+
+            <p>
+              Emulating a video game dressing room experience, our simulation
+              allows users to virtually try on clothing from an extensive array
+              of trendy styles, effortlessly and efficiently. With its
+              commitment to scalability and cross-platform accessibility, ProvaX
+              is poised to set the industry standard for virtual fitting,
+              ushering in a new era of personalized online shopping. Welcome to
+              the future of fashion exploration. Welcome to ProvaX.
+            </p>
           </div>
         </section>
 
@@ -71,6 +97,9 @@
               your customers to make confident purchasing decisions, leading to
               fewer returns and higher sales.
             </p>
+          </div>
+          <div class="section-img">
+            <img src="images/why-provax.svg" alt="Section image" />
           </div>
         </section>
         <!-- End Why ProvaX section -->
