--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <link rel="stylesheet" href="css/stylesheet.css" />
   </head>
   <body>
-    <div class="container">
-      <!-- Start header  -->
-      <header id="header">
+    <!-- Start header  -->
+    <header id="header">
+      <div class="container">
         <div class="logo">
           <a href="index.html">
             <img src="images/logo.png" alt="" />
@@ -33,10 +33,12 @@
           <a href="#services">Services</a>
           <a href="#contact">Contact</a>
         </nav>
-      </header>
-      <!-- End header  -->
-      <!-- Start Landing section -->
-      <section id="home">
+      </div>
+    </header>
+    <!-- End header  -->
+    <!-- Start Landing section -->
+    <section id="home">
+      <div class="container">
         <div class="content">
           <h1>
             <span>Try</span> in a second,<br />
@@ -58,8 +60,10 @@
         <div class="section-img">
           <img src="images/img1.svg" alt="Section Image" />
         </div>
-      </section>
-      <!-- End Landing section -->
+      </div>
+    </section>
+    <!-- End Landing section -->
+    <div class="container">
       <!-- Start Services -->
       <section class="services" id="services">
         <h2>Discover <span>Your Perfect Fit</span></h2>
@@ -121,8 +125,8 @@
         </div>
       </section>
       <!-- End feature section -->
-      <!-- Start CTA Section -->
     </div>
+    <!-- Start CTA Section -->
     <section class="cta">
       <div class="container">
         <div>
