--- a/about.html
+++ b/about.html
@@ -33,6 +33,17 @@
           <a href="index.html#services">Services</a>
           <a href="index.html#contact">Contact</a>
         </nav>
+        <div class="nav-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <ul class="nav-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </div>
     </header>
     <!-- End header  -->
@@ -106,9 +117,10 @@
         <!-- End Why ProvaX section -->
       </main>
     </div>
-      <!-- Footer Section -->
-      <footer>
-        <p>&copy; 2024 <a href="#header">ProvaX</a>. All rights reserved.</p>
-      </footer>
+    <!-- Footer Section -->
+    <footer>
+      <p>&copy; 2024 <a href="#">ProvaX</a>. All rights reserved.</p>
+    </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
