--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <link rel="stylesheet" href="css/stylesheet.css" />
   </head>
   <body>
+    <!-- Start Loading  -->
+    <div class='loading'>
+    <img src='images/logo.png'>
+    </div>
+    <!-- End Loading  -->
     <!-- Start header  -->
     <header id="header">
       <div class="container">
@@ -33,6 +38,17 @@
           <a href="#services">Services</a>
           <a href="#contact">Contact</a>
         </nav>
+        <div class="nav-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <ul class="nav-menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </div>
     </header>
     <!-- End header  -->
@@ -199,8 +215,9 @@
     <!-- End Contact Section -->
     <!-- Start Footer -->
     <footer>
-      <p>&copy; 2024 <a href="#header">ProvaX</a>. All rights reserved.</p>
+      <p>&copy; 2024 <a href="#">ProvaX</a>. All rights reserved.</p>
     </footer>
     <!-- End Footer -->
+    <script src="js/main.js"></script>
   </body>
 </html>
