--- a/about.html
+++ b/about.html
@@ -18,6 +18,11 @@
     <link rel="stylesheet" href="css/stylesheet.css" />
   </head>
   <body>
+    <!-- Start Loading  -->
+    <div class="loading">
+      <img src="images/logo.png" />
+    </div>
+    <!-- End Loading  -->
     <!-- Start header  -->
     <header id="header">
       <div class="container">
