--- a/coming-soon.html
+++ b/coming-soon.html
@@ -12,17 +12,26 @@
     <link rel="stylesheet" href="css/stylesheet.css" />
   </head>
   <body>
+    <!-- Start Loading  -->
+    <div class="loading">
+      <img src="images/logo.png" />
+    </div>
+    <!-- End Loading  -->
     <div class="soon">
       <div class="container">
         <div class="section-img">
-          <img src="images/under-construction.svg" alt='Section image' />
+          <img src="images/under-construction.svg" alt="Section image" />
         </div>
         <h1>Coming Soon</h1>
         <p>We're working hard to bring you an amazing app!</p>
-        <p>Be the first to experience our innovative features and exclusive offers.</p>
+        <p>
+          Be the first to experience our innovative features and exclusive
+          offers.
+        </p>
 
         <a href="index.html" class="cta-button">Explore more</a>
       </div>
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
