add founders section

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
   <body>
     <!-- Start Loading  -->
-    <div class='loading'>
-    <img src='images/logo.png'>
+    <div class="loading">
+      <img src="images/logo.png" />
     </div>
     <!-- End Loading  -->
     <!-- Start header  -->
@@ -79,8 +79,8 @@
       </div>
     </section>
     <!-- End Landing section -->
+    <!-- Start Services -->
     <div class="container">
-      <!-- Start Services -->
       <section class="services" id="services">
         <h2>Discover <span>Your Perfect Fit</span></h2>
         <div class="content">
@@ -140,8 +140,86 @@
           </div>
         </div>
       </section>
-      <!-- End feature section -->
     </div>
+    <!-- End feature section -->
+    <!-- Start founders Sections -->
+    <section class="founders">
+      <h2>Our <span>Founders</span></h2>
+      <p>Meet Our Founders: The Faces Behind ProvaX</p>
+      <div class="container">
+        <div class="slider-track">
+          <div class="slider">
+            <div class="card">
+              <div class="image">
+                <img src="images/adham-hossam.jpg" alt="Adham Hossam" />
+                <h3>Adham Hossam</h3>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="images/adham-hany.jpg" alt="Adham Hany" />
+                <h3>Adham Hany</h3>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img
+                  src="images/abdelrahman-nabil.jpg"
+                  alt="Abdulrahman Nabel"
+                />
+                <h3>Abdulrahman Nabel</h3>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="images/aya-fahim.jpg" alt="Aya Ahmed" />
+                <h3>Aya Ahmed</h3>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="images/ahmed-medhat.jpg" alt="Ahmed Medhat" />
+                <h3>Ahmed Medhat</h3>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="images/adham-hossam.jpg" alt="Adham Hossam" />
+                <h3>Adham Hossam</h3>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="images/adham-hany.jpg" alt="Adham Hany" />
+                <h3>Adham Hany</h3>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img
+                  src="images/abdelrahman-nabil.jpg"
+                  alt="Abdulrahman Nabel"
+                />
+                <h3>Abdulrahman Nabel</h3>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="images/aya-fahim.jpg" alt="Aya Ahmed" />
+                <h3>Aya Ahmed</h3>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image">
+                <img src="images/ahmed-medhat.jpg" alt="Ahmed Medhat" />
+                <h3>Ahmed Medhat</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End founders Sections -->
     <!-- Start CTA Section -->
     <section class="cta">
       <div class="container">
