last adjustments for founders section

--- a/about.html
+++ b/about.html
@@ -88,7 +88,6 @@
             </p>
           </div>
         </section>
-
         <!-- Start Why ProvaX Section -->
         <section id="why-provax">
           <div class="container">
@@ -120,6 +119,159 @@
           </div>
         </section>
         <!-- End Why ProvaX section -->
+        <!-- Start founders Sections -->
+        <section class="founders">
+          <div class="container">
+            <h2>Our <span>Founders</span></h2>
+            <p>Meet Our Founders: The Faces Behind ProvaX</p>
+            <div class="content">
+              <div class="slider">
+                <div class="author active" data-author="pro">
+                  <div class="image">
+                    <img src="images/Logo.png" alt="ProvaX" />
+                  </div>
+                  <div class="text">
+                    <blockquote>
+                      <p>
+                        &ldquo; Aya, Adham.H, Abdelrahman, Adham.E, and Ahmed
+                        are a dynamic team of entrepreneurs who came together
+                        with a shared vision and complementary skills. Their
+                        partnership is founded on trust, collaboration, and a
+                        mutual commitment to success. With diverse backgrounds
+                        in design, Business, finance, community development, and
+                        sales, they bring a wealth of expertise to the table.
+                        &rdquo;
+                      </p>
+                    </blockquote>
+                    <div class="name">&mdash; ProvaX</div>
+                  </div>
+                </div>
+                <div class="author" data-author="af">
+                  <div class="image">
+                    <img src="images/aya-fahim.jpg" alt="Aya Fahim" />
+                  </div>
+                  <div class="text">
+                    <blockquote>
+                      <p>
+                        &ldquo; Aya Ahmed is a visionary leader with a knack for
+                        turning ideas into reality. With a background in Finance
+                        and a passion for innovation, she co-founded our company
+                        to revolutionize the way we interact with technology.
+                        Aya's expertise lies in product development and
+                        strategic planning, where she consistently drives our
+                        team towards achieving our ambitious goals. &rdquo;
+                      </p>
+                    </blockquote>
+                    <div class="name">&mdash; Aya Ahmed</div>
+                  </div>
+                </div>
+                <div class="author" data-author="aha">
+                  <div class="image">
+                    <img src="images/adham-hany.jpg" alt="Adham Hany" />
+                  </div>
+                  <div class="text">
+                    <blockquote>
+                      <p>
+                        &ldquo; Adham Hany is an expert strategist, adept at
+                        navigating complex challenges and seizing opportunities.
+                        With a background in finance and an analytical mindset,
+                        he co-founded our company to disrupt traditional
+                        business models. Adham's role as the chief financial
+                        officer is crucial in managing our finances and ensuring
+                        our long-term sustainability and growth. &rdquo;
+                      </p>
+                    </blockquote>
+                    <div class="name">&mdash; Adham Hany</div>
+                  </div>
+                </div>
+                <div class="author" data-author="an">
+                  <div class="image">
+                    <img
+                      src="images/abdelrahman-nabil.jpg"
+                      alt="Abdelrahman Nabil"
+                    />
+                  </div>
+                  <div class="text">
+                    <blockquote>
+                      <p>
+                        &ldquo; Abdelrahman Nabil is a seasoned entrepreneur
+                        with a proven track record of success. With a background
+                        in sales and a natural gift for communication, he
+                        co-founded our company to disrupt the market.
+                        Abdelrahman's role as the head of sales is crucial in
+                        driving revenue and expanding our customer base,
+                        building strong relationships and delivering value to
+                        our clients. &rdquo;
+                      </p>
+                    </blockquote>
+                    <div class="name">&mdash; Abdelrahman Nabil</div>
+                  </div>
+                </div>
+                <div class="author" data-author="aho">
+                  <div class="image">
+                    <img src="images/adham-hossam.jpg" alt="Adham Hossam" />
+                  </div>
+                  <div class="text">
+                    <blockquote>
+                      <p>
+                        &ldquo; Adham Emam is the creative genius behind our
+                        company's designs, logo, and website. With a keen eye
+                        for aesthetics and a deep understanding of user
+                        experience, Adham crafts visually stunning and highly
+                        functional designs that captivate our audience. His
+                        passion for design extends beyond mere visuals; it
+                        encompasses the seamless integration of form and
+                        function, ensuring that every aspect of our brand
+                        reflects our core values and resonates with our
+                        customers. Through his talent and dedication, Adham has
+                        played a pivotal role in shaping our company's identity
+                        and establishing a strong online presence. &rdquo;
+                      </p>
+                    </blockquote>
+                    <div class="name">&mdash; Adham Emam</div>
+                  </div>
+                </div>
+                <!-- <div class="author" data-author="am">
+              <div class="image">
+                <img src="images/ahmed-medhat.jpg" alt="Ahmed Medhat" />
+              </div>
+              <div class="text">
+                <blockquote>
+                  <p>
+                    &ldquo; Ahmed Medhat is a passionate advocate for social impact, driven by a desire to make the world a better place. With a background in community development and a heart for service, he co-founded our company to create meaningful change. Ahmed's role as the head of social responsibility is instrumental in integrating philanthropy into our business model, ensuring that we give back to the communities we serve. &rdquo;
+                  </p>
+                </blockquote>
+                <div class="name">&mdash; Ahmed Medhat</div>
+              </div>
+            </div> -->
+                <ul class="nav">
+                  <li data-author="pro" class="active">
+                    <img src="images/Logo.png" alt="ProvaX" />
+                  </li>
+                  <li data-author="af">
+                    <img src="images/aya-fahim.jpg" alt="Aya Fahim" />
+                  </li>
+                  <li data-author="aha">
+                    <img src="images/adham-hany.jpg" alt="Adham Hany" />
+                  </li>
+                  <li data-author="an">
+                    <img
+                      src="images/abdelrahman-nabil.jpg"
+                      alt="Abdelrahman Nabil"
+                    />
+                  </li>
+                  <li data-author="aho">
+                    <img src="images/adham-hossam.jpg" alt="Adham Hossam" />
+                  </li>
+                  <!-- <li data-author="am">
+                    <img src="images/ahmed-medhat.jpg" alt="Ahmed Medhat" />
+                  </li> -->
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- End founders Sections -->
       </main>
     </div>
     <!-- Footer Section -->
