--- a/about.html
+++ b/about.html
@@ -6,12 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About ProvaX</title>
     <!-- Tab Icon -->
-    <link rel="icon" href="images/logo.ico" />
-    <!-- Font Awesome librarry -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    />
+    <link rel="icon" href="images/icon.ico" />
     <!-- Normalize File -->
     <link rel="stylesheet" href="css/normalize.css" />
     <!-- StyleSheet color -->
@@ -128,7 +123,7 @@
               <div class="slider">
                 <div class="author active" data-author="pro">
                   <div class="image">
-                    <img src="images/Logo.png" alt="ProvaX" />
+                    <img src="images/logo.png" alt="ProvaX" />
                   </div>
                   <div class="text">
                     <blockquote>
@@ -246,7 +241,7 @@
             </div> -->
                 <ul class="nav">
                   <li data-author="pro" class="active">
-                    <img src="images/Logo.png" alt="ProvaX" />
+                    <img src="images/logo.png" alt="ProvaX" />
                   </li>
                   <li data-author="af">
                     <img src="images/aya-fahim.jpg" alt="Aya Fahim" />
