--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProvaX</title>
     <!-- Tab Icon -->
-    <link rel="icon" href="images/logo.ico" />
+    <link rel="icon" href="images/icon.ico" />
     <!-- Font Awesome librarry -->
     <link
       rel="stylesheet"
