add section animation on scroll

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     <div class="container">
       <!-- Main Content Section -->
       <main>
-        <section id="about">
+        <section id="about" class="hidden">
           <h2>About <span>ProvaX</span></h2>
           <div>
             <p>
@@ -85,7 +85,7 @@
         </section>
         <!-- Start Why ProvaX Section -->
         <section id="why-provax">
-          <div class="container">
+          <div class="container hidden">
             <h2>Why <span>ProvaX?</span></h2>
             <p>
               Shopping for clothes online has become increasingly popular, with
@@ -115,7 +115,7 @@
         </section>
         <!-- End Why ProvaX section -->
         <!-- Start founders Sections -->
-        <section class="founders">
+        <section class="founders hidden">
           <div class="container">
             <h2>Our <span>Founders</span></h2>
             <p>Meet Our Founders: The Faces Behind ProvaX</p>
