--- a/index.html
+++ b/index.html
@@ -55,6 +55,49 @@
     <!-- End header  -->
     <!-- Start Landing section -->
     <section id="home">
+      <div class="background">
+        <svg
+          class="waves"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 24 150 28"
+          preserveAspectRatio="none"
+          shape-rendering="auto"
+        >
+          <defs>
+            <path
+              id="gentle-wave"
+              d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+            />
+          </defs>
+          <g class="parallax">
+            <use
+              xlink:href="#gentle-wave"
+              x="48"
+              y="0"
+              fill="rgba(175, 39, 190, 0.7)"
+            />
+            <use
+              xlink:href="#gentle-wave"
+              x="48"
+              y="3"
+              fill="rgba(252, 87, 92, 0.5)"
+            />
+            <use
+              xlink:href="#gentle-wave"
+              x="48"
+              y="5"
+              fill="rgba(175, 39, 190, 0.3)"
+            />
+            <use
+              xlink:href="#gentle-wave"
+              x="48"
+              y="7"
+              fill="rgba(252, 87, 92, 1)"
+            />
+          </g>
+        </svg>
+      </div>
       <div class="container">
         <div class="content">
           <h1>
@@ -82,7 +125,7 @@
     <!-- End Landing section -->
     <!-- Start Services -->
     <div class="container">
-      <section class="services" id="services">
+      <section class="services hidden" id="services">
         <h2>Discover <span>Your Perfect Fit</span></h2>
         <div class="content">
           <div class="box">
@@ -117,7 +160,7 @@
       </section>
       <!-- End Services -->
       <!-- Start feature section -->
-      <section class="feature" id="feature">
+      <section class="feature hidden" id="feature">
         <img src="images/img2.svg" alt="Section image" />
         <div class="content">
           <h2><span>Personalize</span> Your Style</h2>
@@ -155,7 +198,7 @@
     </section>
     <!-- End CTA Section -->
     <!-- Start Contact Section -->
-    <section id="contact">
+    <section id="contact" class="hidden">
       <h2>Contact Us</h2>
       <h3>Have Any Questions?</h3>
       <p>Don't hesitate to Mail Us</p>
